# Patrin_R_QAP23

./: mems.py  pyproject.toml  pytest.ini
core/: base_page.py
pages/: automation_lab_page.py  savings_page.py
tests/: test_easy.py  test_mems.py
tests/test_page_object/: test_savings_page.py
tests/tests_playwright/: test_open_login_page.py  test_simple_example.py
